--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -105,6 +106,13 @@
 
         <activity android:name=".EmployeeDetailActivity"
             android:exported="false" />
+
+        <activity android:name=".ScheduleActivity"
+            android:exported="false" />
+
+        <activity android:name=".FloorMapActivity"
+            android:exported="false"
+            android:launchMode="singleTop"/>
 
         <activity
             android:name=".MainActivity"
