--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,11 @@
         tools:targetApi="31">
 
         <activity
+            android:name=".ScheduleActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Urtisi"/>
+
+        <activity
             android:name=".SettingsActivity"
             android:exported="false"/>
 
